Xếp TKB Tự động fix