@@ -1,12 +1,14 @@
 package controllers.XepTKBTuDong;
 
 import dao.ThoiKhoaBieuDAO;
-import dao.XepTKBDAO; // Cần DAO này để lấy danh sách lớp và phân công môn học
+import dao.XepTKBDAO;
 import entities.*;
 
+import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.collections.transformation.FilteredList;
+import javafx.concurrent.Task;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
@@ -20,15 +22,18 @@ import javafx.util.StringConverter;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class ChuanBiController {
 
     @FXML private ComboBox<HocKy> hocKyComboBox;
     @FXML private ComboBox<ThoiKhoaBieu> tkbCoSoComboBox;
+    // @FXML private Label tkbCoSoBuoiLabel; // Đã xóa khỏi FXML
+
+    @FXML private TitledPane giaoVienLoaiTruPane; // Đảm bảo có fx:id này trong FXML
     @FXML private TextField searchGiaoVienTextField;
     @FXML private ListView<GiaoVien> giaoVienExcludeListView;
-    @FXML private Button btnTiepTuc;
+
+    @FXML private Button btnTiepTuc; // Đảm bảo có fx:id này trong FXML
 
     @FXML private Spinner<Integer> thu2Spinner;
     @FXML private Spinner<Integer> thu3Spinner;
@@ -37,49 +42,78 @@ public class ChuanBiController {
     @FXML private Spinner<Integer> thu6Spinner;
     @FXML private Spinner<Integer> thu7Spinner;
 
-    @FXML private TitledPane flexibleSubjectsPane; // TitledPane mới
-    @FXML private VBox flexibleSubjectTeacherSelectionVBox; // VBox bên trong ScrollPane
+    @FXML private TitledPane soTietTheoKhoiPane;
+    @FXML private ComboBox<String> khoiComboBoxSoTiet;
+    @FXML private Label phanPhoiTietLabel;
+    @FXML private Label tongSoTietTuanLabel;
+
+    @FXML private TitledPane flexibleSubjectsPane;
+    @FXML private VBox flexibleSubjectTeacherSelectionVBox;
 
     private ThoiKhoaBieuDAO thoiKhoaBieuDAO;
-    private XepTKBDAO xepTKBDAO; // Thêm DAO này
+    private XepTKBDAO xepTKBDAO;
 
-    private ObservableList<GiaoVien> allGiaoVienList; // Danh sách tất cả GV (trừ admin)
-    private ObservableList<GiaoVien> excludedGiaoVienList; // GV bị loại trừ chung
-
-    // Danh sách các MÃ MÔN HỌC (hoặc tiền tố mã môn học) được coi là linh hoạt
-    // Ví dụ: "TIN" cho Tin học, "GDTC" cho Giáo dục thể chất
-    // Bạn cần điều chỉnh danh sách này cho phù hợp với mã môn học thực tế của bạn
+    private ObservableList<GiaoVien> allGiaoVienList;
+    private ObservableList<GiaoVien> excludedGiaoVienList;
     private final List<String> MA_MON_HOC_PREFIX_LINH_HOAT = Arrays.asList("TIN", "GDTC");
-
-    // Lưu trữ lựa chọn giáo viên cho các môn linh hoạt: Map<MaLop, Map<MaMH, MaGV_DaChon>>
     private Map<String, Map<String, String>> preAssignedTeachersForFlexibleSubjects;
+
+    private Map<String, Map<Integer, Integer>> soTietMoiThuTheoKhoi;
+    private final List<String> KHOI_LIST = Arrays.asList("10", "11", "12");
 
 
     public ChuanBiController() {
         thoiKhoaBieuDAO = new ThoiKhoaBieuDAO();
-        xepTKBDAO = new XepTKBDAO(); // Khởi tạo
+        xepTKBDAO = new XepTKBDAO();
         allGiaoVienList = FXCollections.observableArrayList();
         excludedGiaoVienList = FXCollections.observableArrayList();
         preAssignedTeachersForFlexibleSubjects = new HashMap<>();
+
+        soTietMoiThuTheoKhoi = new HashMap<>();
+        int defaultPeriods = 5;
+        for (String khoi : KHOI_LIST) {
+            Map<Integer, Integer> defaultSettingsForKhoi = new HashMap<>();
+            for (int i = 2; i <= 7; i++) {
+                defaultSettingsForKhoi.put(i, defaultPeriods);
+            }
+            soTietMoiThuTheoKhoi.put(khoi, defaultSettingsForKhoi);
+        }
     }
 
     @FXML
     public void initialize() {
         setupHocKyComboBox();
         setupTkbCoSoComboBox();
-        loadAllGiaoVienList(); // Tải danh sách GV một lần khi khởi tạo
-        setupGiaoVienExcludeListView();
-        setupSearchGiaoVienTextField();
-        setupDayPeriodSpinners();
+        loadAllGiaoVienList();
+        setupGiaoVienExcludeListView(); // Cần được gọi sau loadAllGiaoVienList
+        setupSearchGiaoVienTextField(); // Cần được gọi sau setupGiaoVienExcludeListView
+
+        setupKhoiComboBoxSoTiet();
+        setupDayPeriodSpinnersForKhoi();
+
+        if (!KHOI_LIST.isEmpty()) {
+            khoiComboBoxSoTiet.getSelectionModel().selectFirst();
+            if (khoiComboBoxSoTiet.getSelectionModel().getSelectedItem() != null) {
+                updateSpinnersAndLabelsForSelectedKhoi(khoiComboBoxSoTiet.getSelectionModel().getSelectedItem());
+            }
+        } else {
+            phanPhoiTietLabel.setText("Phân phối tiết (CSDL): --");
+            tongSoTietTuanLabel.setText("Tổng số tiết theo cài đặt: --");
+        }
 
         tkbCoSoComboBox.setDisable(true);
-        flexibleSubjectsPane.setExpanded(false); // Mặc định đóng TitledPane
+        // tkbCoSoBuoiLabel.setText("Buổi: --"); // Đã xóa
+        flexibleSubjectsPane.setExpanded(false);
+        giaoVienLoaiTruPane.setExpanded(false); // Có thể đặt mặc định đóng
+        soTietTheoKhoiPane.setExpanded(true);
     }
 
     private void loadAllGiaoVienList() {
-        List<GiaoVien> gvList = thoiKhoaBieuDAO.getDanhSachGiaoVien(); // Giả sử hàm này lấy tất cả GV (trừ ADMIN)
+        List<GiaoVien> gvList = thoiKhoaBieuDAO.getDanhSachGiaoVien();
         if (gvList != null) {
             allGiaoVienList.setAll(gvList);
+        } else {
+            allGiaoVienList.clear(); // Đảm bảo rỗng nếu DAO trả về null
         }
     }
 
@@ -106,13 +140,23 @@ public class ChuanBiController {
                 return tkbCoSoComboBox.getItems().stream().filter(tkb -> tkb != null && tkb.toString().equals(string)).findFirst().orElse(null);
             }
         });
-        tkbCoSoComboBox.getItems().add(null);
+        tkbCoSoComboBox.getItems().add(null); // Luôn có lựa chọn "Không chọn"
+        tkbCoSoComboBox.getSelectionModel().selectFirst(); // Chọn mặc định
     }
 
     private void setupGiaoVienExcludeListView() {
-        // allGiaoVienList đã được tải trong initialize
+        // Đảm bảo allGiaoVienList đã được tải
+        if (allGiaoVienList.isEmpty() && giaoVienExcludeListView.getItems() != null) {
+            // Nếu allGiaoVienList rỗng nhưng ListView có item (từ lần chạy trước), thì clear nó
+            if (giaoVienExcludeListView.getItems() instanceof FilteredList) {
+                ((FilteredList<GiaoVien>)giaoVienExcludeListView.getItems()).getSource().clear();
+            } else {
+                giaoVienExcludeListView.getItems().clear();
+            }
+        }
         FilteredList<GiaoVien> filteredData = new FilteredList<>(allGiaoVienList, p -> true);
         giaoVienExcludeListView.setItems(filteredData);
+
         giaoVienExcludeListView.setCellFactory(lv -> new ListCell<>() {
             @Override
             protected void updateItem(GiaoVien gv, boolean empty) {
@@ -139,25 +183,111 @@ public class ChuanBiController {
         searchGiaoVienTextField.textProperty().addListener((obs, oldV, newV) -> filterGiaoVienList(newV));
     }
 
-    private void setupDayPeriodSpinners() {
-        // ... (giữ nguyên)
-        int minPeriods = 0;
-        int maxPeriods = 5;
-        int defaultPeriods = 5;
-
-        configureSpinner(thu2Spinner, minPeriods, maxPeriods, defaultPeriods);
-        configureSpinner(thu3Spinner, minPeriods, maxPeriods, defaultPeriods);
-        configureSpinner(thu4Spinner, minPeriods, maxPeriods, defaultPeriods);
-        configureSpinner(thu5Spinner, minPeriods, maxPeriods, defaultPeriods);
-        configureSpinner(thu6Spinner, minPeriods, maxPeriods, defaultPeriods);
-        configureSpinner(thu7Spinner, minPeriods, maxPeriods, defaultPeriods);
+    private void setupKhoiComboBoxSoTiet() {
+        khoiComboBoxSoTiet.setItems(FXCollections.observableArrayList(KHOI_LIST));
     }
 
-    private void configureSpinner(Spinner<Integer> spinner, int min, int max, int initial) {
-        spinner.setValueFactory(new SpinnerValueFactory.IntegerSpinnerValueFactory(min, max, initial));
+    private void setupDayPeriodSpinnersForKhoi() {
+        int minPeriods = 0;
+        int maxPeriods = 5;
+
+        configureSpinner(thu2Spinner, minPeriods, maxPeriods);
+        configureSpinner(thu3Spinner, minPeriods, maxPeriods);
+        configureSpinner(thu4Spinner, minPeriods, maxPeriods);
+        configureSpinner(thu5Spinner, minPeriods, maxPeriods);
+        configureSpinner(thu6Spinner, minPeriods, maxPeriods);
+        configureSpinner(thu7Spinner, minPeriods, maxPeriods);
+
+        Spinner<?>[] spinners = {thu2Spinner, thu3Spinner, thu4Spinner, thu5Spinner, thu6Spinner, thu7Spinner};
+        for (int i = 0; i < spinners.length; i++) {
+            final int dayOfWeek = i + 2;
+            spinners[i].valueProperty().addListener((obs, oldValue, newValue) -> {
+                String selectedKhoi = khoiComboBoxSoTiet.getSelectionModel().getSelectedItem();
+                if (selectedKhoi != null && newValue instanceof Integer) {
+                    // Đảm bảo map cho khối tồn tại
+                    soTietMoiThuTheoKhoi.computeIfAbsent(selectedKhoi, k -> {
+                        Map<Integer, Integer> newMap = new HashMap<>();
+                        for(int day=2; day<=7; day++) newMap.put(day, 0); // Khởi tạo với 0 nếu chưa có
+                        return newMap;
+                    });
+                    soTietMoiThuTheoKhoi.get(selectedKhoi).put(dayOfWeek, (Integer) newValue);
+                    updateTongSoTietTuanLabel(selectedKhoi);
+                }
+            });
+        }
+    }
+
+    private void configureSpinner(Spinner<Integer> spinner, int min, int max) {
+        SpinnerValueFactory<Integer> valueFactory = new SpinnerValueFactory.IntegerSpinnerValueFactory(min, max, min);
+        spinner.setValueFactory(valueFactory);
+    }
+
+    @FXML
+    void handleKhoiSoTietSelection(ActionEvent event) {
+        String selectedKhoi = khoiComboBoxSoTiet.getSelectionModel().getSelectedItem();
+        if (selectedKhoi != null) {
+            updateSpinnersAndLabelsForSelectedKhoi(selectedKhoi);
+        }
+    }
+
+    private void updateSpinnersAndLabelsForSelectedKhoi(String khoi) {
+        if (khoi == null) {
+            phanPhoiTietLabel.setText("Phân phối tiết (CSDL): Chọn khối");
+            tongSoTietTuanLabel.setText("Tổng số tiết theo cài đặt: Chọn khối");
+            return;
+        }
+        // Đảm bảo map cho khối tồn tại và có giá trị mặc định nếu chưa có
+        Map<Integer, Integer> settingsForKhoi = soTietMoiThuTheoKhoi.computeIfAbsent(khoi, k -> {
+            Map<Integer, Integer> newMap = new HashMap<>();
+            int defaultPeriods = 5; // Hoặc giá trị mặc định bạn muốn
+            for(int day=2; day<=7; day++) newMap.put(day, defaultPeriods);
+            return newMap;
+        });
+
+
+        thu2Spinner.getValueFactory().setValue(settingsForKhoi.getOrDefault(2, 0));
+        thu3Spinner.getValueFactory().setValue(settingsForKhoi.getOrDefault(3, 0));
+        thu4Spinner.getValueFactory().setValue(settingsForKhoi.getOrDefault(4, 0));
+        thu5Spinner.getValueFactory().setValue(settingsForKhoi.getOrDefault(5, 0));
+        thu6Spinner.getValueFactory().setValue(settingsForKhoi.getOrDefault(6, 0));
+        thu7Spinner.getValueFactory().setValue(settingsForKhoi.getOrDefault(7, 0));
+
+        HocKy selectedHocKy = hocKyComboBox.getSelectionModel().getSelectedItem();
+        if (selectedHocKy != null) {
+            Task<Integer> loadPhanPhoiTask = new Task<>() {
+                @Override
+                protected Integer call() throws Exception {
+                    return xepTKBDAO.getTongPhanPhoiTietTheoKhoi(khoi, selectedHocKy.getMaHK());
+                }
+                @Override
+                protected void succeeded() {
+                    Platform.runLater(() -> phanPhoiTietLabel.setText("Phân phối tiết (CSDL): " + getValue() + " tiết"));
+                }
+                @Override
+                protected void failed() {
+                    Platform.runLater(() -> phanPhoiTietLabel.setText("Phân phối tiết (CSDL): Lỗi tải"));
+                    getException().printStackTrace();
+                }
+            };
+            new Thread(loadPhanPhoiTask).start();
+        } else {
+            phanPhoiTietLabel.setText("Phân phối tiết (CSDL): Chọn học kỳ");
+        }
+        updateTongSoTietTuanLabel(khoi);
+    }
+
+    private void updateTongSoTietTuanLabel(String khoi) {
+        if (khoi == null || !soTietMoiThuTheoKhoi.containsKey(khoi)) {
+            tongSoTietTuanLabel.setText("Tổng số tiết theo cài đặt: --");
+            return;
+        }
+        Map<Integer, Integer> settings = soTietMoiThuTheoKhoi.get(khoi);
+        int tongTietCaiDat = settings.values().stream().mapToInt(Integer::intValue).sum();
+        tongSoTietTuanLabel.setText("Tổng số tiết theo cài đặt: " + tongTietCaiDat + " tiết/tuần");
     }
 
     private void filterGiaoVienList(String searchText) {
+        // ... (giữ nguyên)
         FilteredList<GiaoVien> filteredData = (FilteredList<GiaoVien>) giaoVienExcludeListView.getItems();
         if (searchText == null || searchText.isEmpty()) {
             filteredData.setPredicate(s -> true);
@@ -172,34 +302,8 @@ public class ChuanBiController {
         giaoVienExcludeListView.refresh();
     }
 
-    @FXML
-    void handleHocKySelection(ActionEvent event) {
-        HocKy selectedHocKy = hocKyComboBox.getSelectionModel().getSelectedItem();
-        tkbCoSoComboBox.getItems().clear();
-        tkbCoSoComboBox.getItems().add(null);
-
-        if (selectedHocKy != null) {
-            tkbCoSoComboBox.setDisable(false);
-            List<ThoiKhoaBieu> tkbList = thoiKhoaBieuDAO.getDanhSachThoiKhoaBieuTheoHocKy(selectedHocKy.getMaHK());
-            if (tkbList != null && !tkbList.isEmpty()) {
-                tkbCoSoComboBox.getItems().addAll(tkbList);
-            } else {
-                tkbCoSoComboBox.setPromptText("Không có TKB cho học kỳ này");
-            }
-            // Tải và hiển thị UI chọn GV cho môn linh hoạt
-            populateFlexibleSubjectTeacherSelectionUI(selectedHocKy);
-
-        } else {
-            tkbCoSoComboBox.setDisable(true);
-            tkbCoSoComboBox.setPromptText("Chọn TKB cơ sở (nếu có)");
-            flexibleSubjectTeacherSelectionVBox.getChildren().clear(); // Xóa lựa chọn cũ
-            flexibleSubjectTeacherSelectionVBox.getChildren().add(new Label("Chọn Học Kỳ để tải danh sách môn học."));
-            preAssignedTeachersForFlexibleSubjects.clear();
-        }
-        tkbCoSoComboBox.getSelectionModel().selectFirst();
-    }
-
     private void populateFlexibleSubjectTeacherSelectionUI(HocKy selectedHocKy) {
+        // ... (giữ nguyên)
         flexibleSubjectTeacherSelectionVBox.getChildren().clear();
         preAssignedTeachersForFlexibleSubjects.clear();
 
@@ -208,7 +312,7 @@ public class ChuanBiController {
             return;
         }
 
-        List<Lop> tatCaLopTrongHK = xepTKBDAO.getDanhSachLop(); // Lấy tất cả lớp
+        List<Lop> tatCaLopTrongHK = xepTKBDAO.getDanhSachLop();
         Map<String, List<MonHocHoc>> phanCongTrongHK = xepTKBDAO.getPhanCongMonHocChoTatCaLop(selectedHocKy.getMaHK());
 
         if (tatCaLopTrongHK == null || tatCaLopTrongHK.isEmpty() || phanCongTrongHK == null || phanCongTrongHK.isEmpty()) {
@@ -229,13 +333,12 @@ public class ChuanBiController {
                     foundFlexible = true;
                     Label lbl = new Label("Lớp " + lop.getMaLop() + " - Môn " + mhh.getTenMH() + " ("+mhh.getMaMH()+"):");
                     ComboBox<GiaoVien> gvComboBox = new ComboBox<>();
-                    gvComboBox.setPrefWidth(300); // Đặt chiều rộng cho ComboBox
+                    gvComboBox.setPrefWidth(300);
 
-                    // Lọc giáo viên hợp lệ (chưa bị loại trừ chung) và thuộc TCM của môn học
                     List<GiaoVien> qualifiedTeachers = allGiaoVienList.stream()
-                            .filter(gv -> !excludedGiaoVienList.contains(gv)) // Loại trừ GV đã chọn ở ListView trên
+                            .filter(gv -> !excludedGiaoVienList.contains(gv))
                             .filter(gv -> gv.getMaTCM() != null && gv.getMaTCM().equals(mhh.getMaTCM()))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     ObservableList<GiaoVien> gvOptions = FXCollections.observableArrayList();
                     GiaoVien autoSelectOption = new GiaoVien(null, "Để thuật toán", "tự chọn", null, null, null, null, null, null, null, null, null, null);
@@ -275,10 +378,50 @@ public class ChuanBiController {
         }
     }
 
+    @FXML
+    void handleHocKySelection(ActionEvent event) {
+        HocKy selectedHocKy = hocKyComboBox.getSelectionModel().getSelectedItem();
+        tkbCoSoComboBox.getItems().clear();
+        tkbCoSoComboBox.getItems().add(null);
+        // tkbCoSoBuoiLabel.setText("Buổi: --"); // Đã xóa
+
+        if (selectedHocKy != null) {
+            tkbCoSoComboBox.setDisable(false);
+            List<ThoiKhoaBieu> tkbList = thoiKhoaBieuDAO.getDanhSachThoiKhoaBieuTheoHocKy(selectedHocKy.getMaHK());
+            if (tkbList != null && !tkbList.isEmpty()) {
+                tkbCoSoComboBox.getItems().addAll(tkbList);
+            } else {
+                tkbCoSoComboBox.setPromptText("Không có TKB cho học kỳ này");
+            }
+            String currentSelectedKhoi = khoiComboBoxSoTiet.getSelectionModel().getSelectedItem();
+            if (currentSelectedKhoi == null && !KHOI_LIST.isEmpty()) {
+                currentSelectedKhoi = KHOI_LIST.getFirst();
+                khoiComboBoxSoTiet.getSelectionModel().select(currentSelectedKhoi);
+            } else if (currentSelectedKhoi != null) { // Nếu đã có khối được chọn, cập nhật lại label cho nó
+                updateSpinnersAndLabelsForSelectedKhoi(currentSelectedKhoi);
+            }
+
+
+            populateFlexibleSubjectTeacherSelectionUI(selectedHocKy);
+
+        } else {
+            tkbCoSoComboBox.setDisable(true);
+            tkbCoSoComboBox.setPromptText("Chọn TKB cơ sở (nếu có)");
+            flexibleSubjectTeacherSelectionVBox.getChildren().clear();
+            flexibleSubjectTeacherSelectionVBox.getChildren().add(new Label("Chọn Học Kỳ để tải danh sách môn học."));
+            preAssignedTeachersForFlexibleSubjects.clear();
+            phanPhoiTietLabel.setText("Phân phối tiết (CSDL): Chọn học kỳ");
+            tongSoTietTuanLabel.setText("Tổng số tiết theo cài đặt: Chọn học kỳ");
+        }
+        tkbCoSoComboBox.getSelectionModel().selectFirst();
+    }
 
     @FXML
     void handleTkbCoSoSelection(ActionEvent event) {
+        // ThoiKhoaBieu selectedTKB = tkbCoSoComboBox.getSelectionModel().getSelectedItem();
+        // tkbCoSoBuoiLabel.setText((selectedTKB != null && selectedTKB.getBuoi() != null) ? "Buổi: " + selectedTKB.getBuoi().toUpperCase() : "Buổi: --"); // Đã xóa
     }
+
 
     @FXML
     void handleTiepTuc(ActionEvent event) {
@@ -290,14 +433,7 @@ public class ChuanBiController {
             return;
         }
 
-        Map<Integer, Integer> soTietMoiThu = new HashMap<>();
-        soTietMoiThu.put(2, thu2Spinner.getValue());
-        soTietMoiThu.put(3, thu3Spinner.getValue());
-        soTietMoiThu.put(4, thu4Spinner.getValue());
-        soTietMoiThu.put(5, thu5Spinner.getValue());
-        soTietMoiThu.put(6, thu6Spinner.getValue());
-        soTietMoiThu.put(7, thu7Spinner.getValue());
-
+        // soTietMoiThuTheoKhoi đã được cập nhật tự động bởi listeners của Spinners
         List<GiaoVien> finalExcludedGiaoVienList = new ArrayList<>(excludedGiaoVienList);
 
         try {
@@ -305,8 +441,7 @@ public class ChuanBiController {
             Parent root = loader.load();
 
             XepTKBTuDongController controller = loader.getController();
-            // Truyền thêm preAssignedTeachersForFlexibleSubjects
-            controller.initData(selectedHocKy, selectedTkbCoSo, finalExcludedGiaoVienList, soTietMoiThu, preAssignedTeachersForFlexibleSubjects);
+            controller.initData(selectedHocKy, selectedTkbCoSo, finalExcludedGiaoVienList, soTietMoiThuTheoKhoi, preAssignedTeachersForFlexibleSubjects);
 
             Stage stage = new Stage();
             stage.setTitle("Kết Quả Xếp Thời Khóa Biểu Tự Động");
